test/corpus/puzzle.txt
===================
Puzzle SFC sections
===================

<puzzle-view class="page">
  <AlbumCard album={ album } @play:once={ play(album) } />
  <p>{ capitalize(title.trim()) }</p>
</puzzle-view>

<puzzle-skeleton min-duration="250">
  <div class="animate-pulse"></div>
</puzzle-skeleton>

<script lang="ts">
import { PuzzleView } from '@magic-spells/puzzle';

export default class Album extends PuzzleView {}
</script>

<style scoped>
.page { display: grid; }
</style>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name)
      (attribute
        (normal_attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_text)))))
    (text)
    (self_closing_element
      (tag_name)
      (attribute
        (normal_attribute
          (attribute_name)
          (interpolation
            (identifier))))
      (attribute
        (event_attribute
          (event_name)
          (event_modifier)
          (event_handler
            (call_expression
              (handler_function_name)
              (arguments
                (identifier)))))))
    (text)
    (element
      (start_tag
        (tag_name))
      (interpolation
        (call_expression
          (function_name)
          (arguments
            (call_expression
              (member_expression
                (identifier)
                (method_name))
              (arguments)))))
      (end_tag
        (tag_name)))
    (text)
    (view_end_tag
      (section_tag_name)))
  (text)
  (skeleton_element
    (skeleton_start_tag
      (section_tag_name)
      (attribute
        (normal_attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_text)))))
    (text)
    (element
      (start_tag
        (tag_name)
        (attribute
          (normal_attribute
            (attribute_name)
            (quoted_attribute_value
              (attribute_text)))))
      (end_tag
        (tag_name)))
    (text)
    (skeleton_end_tag
      (section_tag_name)))
  (text)
  (script_element
    (script_start_tag
      (section_tag_name)
      (attribute
        (normal_attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_text)))))
    (script_content)
    (script_end_tag
      (section_tag_name)))
  (text)
  (style_element
    (style_start_tag
      (section_tag_name)
      (attribute
        (normal_attribute
          (attribute_name))))
    (style_content)
    (style_end_tag
      (section_tag_name)))
  (text))

============================
Conditionals and case blocks
============================

<puzzle-view>
  {#if loading}
    <p>Loading</p>
  {:else if album}
    <p>{ album.title }</p>
  {:else}
    <p>Missing</p>
  {/if}

  {#unless disabled}<button>Play</button>{/unless}

  {#case status}
    {:when 'ready', 'playing'}<p>Ready</p>
    {:when 'paused'}<p>Paused</p>
    {:else}<p>Unknown</p>
  {/case}
</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (text)
    (if_statement
      (if_start
        (directive_name)
        (identifier))
      (text)
      (element
        (start_tag
          (tag_name))
        (text)
        (end_tag
          (tag_name)))
      (text)
      (else_if_block
        (else_if_start
          (directive_name)
          (directive_name)
          (identifier))
        (text)
        (element
          (start_tag
            (tag_name))
          (interpolation
            (member_expression
              (identifier)
              (property_identifier)))
          (end_tag
            (tag_name)))
        (text))
      (else_block
        (else_start
          (directive_name))
        (text)
        (element
          (start_tag
            (tag_name))
          (text)
          (end_tag
            (tag_name)))
        (text))
      (if_end
        (directive_name)))
    (text)
    (unless_statement
      (unless_start
        (directive_name)
        (identifier))
      (element
        (start_tag
          (tag_name))
        (text)
        (end_tag
          (tag_name)))
      (unless_end
        (directive_name)))
    (text)
    (case_statement
      (case_start
        (directive_name)
        (identifier))
      (when_block
        (when_start
          (directive_name)
          (string)
          (string))
        (element
          (start_tag
            (tag_name))
          (text)
          (end_tag
            (tag_name)))
        (text))
      (when_block
        (when_start
          (directive_name)
          (string))
        (element
          (start_tag
            (tag_name))
          (text)
          (end_tag
            (tag_name)))
        (text))
      (case_else_block
        (else_start
          (directive_name))
        (element
          (start_tag
            (tag_name))
          (text)
          (end_tag
            (tag_name)))
        (text))
      (case_end
        (directive_name)))
    (text)
    (view_end_tag
      (section_tag_name)))
  (text))

==========================
Collection and range loops
==========================

<puzzle-view>
  {#for track in tracks, i}
    <TrackRow track={ track } position={ i + 1 } @play={ play(track) } />
  {/for}

  {#for 1...4, n}<span>{ n }</span>{/for}
</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (text)
    (for_statement
      (for_start
        (directive_name)
        (loop_binding)
        (identifier)
        (loop_binding))
      (text)
      (self_closing_element
        (tag_name)
        (attribute
          (normal_attribute
            (attribute_name)
            (interpolation
              (identifier))))
        (attribute
          (normal_attribute
            (attribute_name)
            (interpolation
              (binary_expression
                (identifier)
                (number)))))
        (attribute
          (event_attribute
            (event_name)
            (event_handler
              (call_expression
                (handler_function_name)
                (arguments
                  (identifier)))))))
      (text)
      (for_end
        (directive_name)))
    (text)
    (for_statement
      (for_start
        (directive_name)
        (number)
        (number)
        (loop_binding))
      (element
        (start_tag
          (tag_name))
        (interpolation
          (identifier))
        (end_tag
          (tag_name)))
      (for_end
        (directive_name)))
    (text)
    (view_end_tag
      (section_tag_name)))
  (text))

=====================================
Inline directives and balanced braces
=====================================

<puzzle-view>
  <div
    class="row {#if current}is-current{:else}is-idle{/if}"
    style="background:{ theme.colors[mode] }"
    data-value={ format({ title: track.title }) }
    @click={ announce({ title: `Now ${track.title}` }) }>
    { track.title }
  </div>
</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (text)
    (element
      (start_tag
        (tag_name)
        (attribute
          (normal_attribute
            (attribute_name)
            (quoted_attribute_value
              (attribute_text)
              (attribute_if_statement
                (if_start
                  (directive_name)
                  (identifier))
                (attribute_text)
                (attribute_else_block
                  (else_start
                    (directive_name))
                  (attribute_text))
                (if_end
                  (directive_name))))))
        (attribute
          (normal_attribute
            (attribute_name)
            (quoted_attribute_value
              (attribute_text)
              (interpolation
                (subscript_expression
                  (member_expression
                    (identifier)
                    (property_identifier))
                  (identifier))))))
        (attribute
          (normal_attribute
            (attribute_name)
            (interpolation
              (call_expression
                (function_name)
                (arguments
                  (object
                    (pair
                      (property_identifier)
                      (member_expression
                        (identifier)
                        (property_identifier)))))))))
        (attribute
          (event_attribute
            (event_name)
            (event_handler
              (call_expression
                (handler_function_name)
                (arguments
                  (object
                    (pair
                      (property_identifier)
                      (template_string
                        (template_substitution
                          (member_expression
                            (identifier)
                            (property_identifier))))))))))))
      (text)
      (interpolation
        (member_expression
          (identifier)
          (property_identifier)))
      (text)
      (end_tag
        (tag_name)))
    (text)
    (view_end_tag
      (section_tag_name)))
  (text))

=====================
Compile-time SVG path
=====================

<puzzle-view>
  {#svg './icons/play.svg'}
</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (text)
    (svg_directive
      (directive_name)
      (svg_path))
    (text)
    (view_end_tag
      (section_tag_name)))
  (text))

========================
Inline template comments
========================

<puzzle-view>
  {## a simple note }
  {## it's fine — apostrophes are plain text }
  {## outer { user.name } still one comment }
  {## escaped \} brace does not close }
  {###x still a comment }
  <puzzle-skeleton>
    {## comments work in skeleton bodies }
  </puzzle-skeleton>
</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (text)
    (inline_comment)
    (text)
    (inline_comment)
    (text)
    (inline_comment)
    (text)
    (inline_comment)
    (text)
    (inline_comment)
    (text)
    (element
      (start_tag
        (tag_name))
      (text)
      (inline_comment)
      (text)
      (end_tag
        (tag_name)))
    (text)
    (view_end_tag
      (section_tag_name)))
  (text))

=======================
Block template comments
=======================

<puzzle-view>
  {#comment}
    { interpolation } and {#if broken}{/if} and <!-- html --> and it's raw
  {/comment}

  {#comment trailing note is ignored}dropped{/ comment }
</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (text)
    (block_comment)
    (text)
    (block_comment)
    (text)
    (view_end_tag
      (section_tag_name)))
  (text))

=====================
Nested block comments
=====================

<puzzle-view>
  {#comment} outer {#comment} inner {/comment} still outer {/comment}
</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (text)
    (block_comment)
    (text)
    (view_end_tag
      (section_tag_name)))
  (text))

=====================================
Comment keyword boundary (block body)
=====================================

<puzzle-view>
  {#comment} {#commentary} and {#comment-x} are NOT nested openers {/comment}
</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (text)
    (block_comment)
    (text)
    (view_end_tag
      (section_tag_name)))
  (text))

======================
Comment keyword boundary (standalone)
:error
======================

<puzzle-view>{#commentary}x{/if}</puzzle-view>

---

(ERROR)

===============================================
Paired composition markers with fallback bodies
===============================================

<puzzle-view>
  <Card>
    <Slot name="header"><h2>{ capitalize(title) }</h2></Slot>
    <Children>{#if empty}<p>none</p>{:else}<ItemCard item={ item }/>{/if}</Children>
  </Card>
  <Slot>{ number_with_delimiter(count) } left{#svg 'icons/empty.svg'}</Slot>
</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (text)
    (element
      (start_tag
        (tag_name))
      (text)
      (element
        (start_tag
          (tag_name)
          (attribute
            (normal_attribute
              (attribute_name)
              (quoted_attribute_value
                (attribute_text)))))
        (element
          (start_tag
            (tag_name))
          (interpolation
            (call_expression
              (function_name)
              (arguments
                (identifier))))
          (end_tag
            (tag_name)))
        (end_tag
          (tag_name)))
      (text)
      (element
        (start_tag
          (tag_name))
        (if_statement
          (if_start
            (directive_name)
            (identifier))
          (element
            (start_tag
              (tag_name))
            (text)
            (end_tag
              (tag_name)))
          (else_block
            (else_start
              (directive_name))
            (self_closing_element
              (tag_name)
              (attribute
                (normal_attribute
                  (attribute_name)
                  (interpolation
                    (identifier))))))
          (if_end
            (directive_name)))
        (end_tag
          (tag_name)))
      (text)
      (end_tag
        (tag_name)))
    (text)
    (element
      (start_tag
        (tag_name))
      (interpolation
        (call_expression
          (function_name)
          (arguments
            (identifier))))
      (text)
      (svg_directive
        (directive_name)
        (svg_path))
      (end_tag
        (tag_name)))
    (text)
    (view_end_tag
      (section_tag_name)))
  (text))

============================================
Self-closing composition markers still parse
============================================

<puzzle-view><Children/><Slot name="footer"/></puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (self_closing_element
      name: (tag_name))
    (self_closing_element
      name: (tag_name)
      (attribute
        (normal_attribute
          name: (attribute_name)
          value: (quoted_attribute_value
            (attribute_text)))))
    (view_end_tag
      (section_tag_name)))
  (text))

====================
Paired Portal marker
====================

<puzzle-view><Portal><div>Overlay</div></Portal></puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (element
      (start_tag
        (tag_name))
      (element
        (start_tag
          (tag_name))
        (text)
        (end_tag
          (tag_name)))
      (end_tag
        (tag_name)))
    (view_end_tag
      (section_tag_name)))
  (text))

====================================
Functions are called, and calls nest
====================================

<puzzle-view>{ currency(price, '$', 2) }{ truncate(capitalize(post.body), 120,) }{ specialFormat(product.title) }</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (interpolation
      (call_expression
        (function_name)
        (arguments
          (identifier)
          (string)
          (number))))
    (interpolation
      (call_expression
        (function_name)
        (arguments
          (call_expression
            (function_name)
            (arguments
              (member_expression
                (identifier)
                (property_identifier))))
          (number))))
    (interpolation
      (call_expression
        (function_name)
        (arguments
          (member_expression
            (identifier)
            (property_identifier)))))
    (view_end_tag
      (section_tag_name)))
  (text))

=============================================
A '|' in a string or template literal is text
=============================================

<puzzle-view>{ a || b }{ tags.join('|') }{ sep ?? "|" }{ `a|b ${ c } |` }</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (interpolation
      (binary_expression
        (identifier)
        (identifier)))
    (interpolation
      (call_expression
        (member_expression
          (identifier)
          (method_name))
        (arguments
          (string))))
    (interpolation
      (binary_expression
        (identifier)
        (string)))
    (interpolation
      (template_string
        (template_substitution
          (identifier))))
    (view_end_tag
      (section_tag_name)))
  (text))

===============================
Raw block keeps HTML structural
===============================

<puzzle-view>{#raw}<b>bold</b>{/raw}</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (raw_block
      (raw_start
        (directive_name))
      (raw_element
        (raw_start_tag
          (raw_tag_name))
        (raw_text)
        (raw_end_tag
          (raw_tag_name)))
      (raw_end
        (directive_name)))
    (view_end_tag
      (section_tag_name)))
  (text))

===================================
Raw block opener content is ignored
===================================

<puzzle-view>{#raw json}{ "a": 1 }{/raw}</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (raw_block
      (raw_start
        (directive_name)
        (raw_opener_rest))
      (raw_text)
      (raw_end
        (directive_name)))
    (view_end_tag
      (section_tag_name)))
  (text))

=======================================================
Raw block closer tolerates whitespace and does not nest
=======================================================

<puzzle-view>{#raw}outer {#raw} inner{/ raw } tail</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (raw_block
      (raw_start
        (directive_name))
      (raw_text)
      (raw_end
        (directive_name)))
    (text)
    (view_end_tag
      (section_tag_name)))
  (text))

==========================
Raw block braces are inert
==========================

<puzzle-view>{#raw}{ nope } {#if x}{/if} {## note} \{ }{/raw}</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (raw_block
      (raw_start
        (directive_name))
      (raw_text)
      (raw_end
        (directive_name)))
    (view_end_tag
      (section_tag_name)))
  (text))

======================================================
Raw block markers and directive attributes are literal
======================================================

<puzzle-view>{#raw}<Slot/><Portal>x</Portal><Card key={a} ref="r" island flip @click:prevent={go}/><br>{/raw}</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (raw_block
      (raw_start
        (directive_name))
      (raw_self_closing_element
        (raw_tag_name))
      (raw_element
        (raw_start_tag
          (raw_tag_name))
        (raw_text)
        (raw_end_tag
          (raw_tag_name)))
      (raw_self_closing_element
        (raw_tag_name)
        (raw_attribute
          (raw_attribute_name)
          (raw_brace_value))
        (raw_attribute
          (raw_attribute_name)
          (raw_quoted_attribute_value
            (raw_attribute_text)))
        (raw_attribute
          (raw_attribute_name))
        (raw_attribute
          (raw_attribute_name))
        (raw_attribute
          (raw_attribute_name)
          (raw_brace_value)))
      (raw_void_element
        (void_tag_name))
      (raw_end
        (directive_name)))
    (view_end_tag
      (section_tag_name)))
  (text))

==========================================
Raw brace-valued attribute with whitespace
==========================================

<puzzle-view>{#raw}<b k={ a }>x</b>{/raw}</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (raw_block
      (raw_start
        (directive_name))
      (raw_element
        (raw_start_tag
          (raw_tag_name)
          (raw_attribute
            (raw_attribute_name)
            (raw_brace_value)))
        (raw_text)
        (raw_end_tag
          (raw_tag_name)))
      (raw_end
        (directive_name)))
    (view_end_tag
      (section_tag_name)))
  (text))

=======================================================
Raw brace-valued attribute with a nested object literal
=======================================================

<puzzle-view>{#raw}<b data-json={ {"x": 1} }>hi { name }</b>{/ raw }</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (raw_block
      (raw_start
        (directive_name))
      (raw_element
        (raw_start_tag
          (raw_tag_name)
          (raw_attribute
            (raw_attribute_name)
            (raw_brace_value)))
        (raw_text)
        (raw_end_tag
          (raw_tag_name)))
      (raw_end
        (directive_name)))
    (view_end_tag
      (section_tag_name)))
  (text))

===================================================================
Raw brace-valued attribute is not closed by a brace inside a string
===================================================================

<puzzle-view>{#raw}<b d={ {"t": "}"} }>x</b>{/raw}</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (raw_block
      (raw_start
        (directive_name))
      (raw_element
        (raw_start_tag
          (raw_tag_name)
          (raw_attribute
            (raw_attribute_name)
            (raw_brace_value)))
        (raw_text)
        (raw_end_tag
          (raw_tag_name)))
      (raw_end
        (directive_name)))
    (view_end_tag
      (section_tag_name)))
  (text))

==================================================================
Raw brace-valued attribute is not closed by a brace inside a regex
==================================================================

<puzzle-view>{#raw}<b d={/}/.test(s)} e="1">x</b>{/raw}</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (raw_block
      (raw_start
        (directive_name))
      (raw_element
        (raw_start_tag
          (raw_tag_name)
          (raw_attribute
            (raw_attribute_name)
            (raw_brace_value))
          (raw_attribute
            (raw_attribute_name)
            (raw_quoted_attribute_value
              (raw_attribute_text))))
        (raw_text)
        (raw_end_tag
          (raw_tag_name)))
      (raw_end
        (directive_name)))
    (view_end_tag
      (section_tag_name)))
  (text))

==========================================
Dotted component tags (component families)
==========================================

<puzzle-view>
  <Frame.Wrapper class="dotted">
    <Frame.Content>{ title }</Frame.Content>
    <Frame.Inner.Deep/>
  </Frame.Wrapper>
  <Slot.Custom/>
</puzzle-view>

---

(document
  (text)
  (view_element
    (view_start_tag
      (section_tag_name))
    (text)
    (element
      (start_tag
        name: (tag_name)
        (attribute
          (normal_attribute
            name: (attribute_name)
            value: (quoted_attribute_value
              (attribute_text)))))
      (text)
      (element
        (start_tag
          name: (tag_name))
        (interpolation
          value: (identifier))
        (end_tag
          name: (tag_name)))
      (text)
      (self_closing_element
        name: (tag_name))
      (text)
      (end_tag
        name: (tag_name)))
    (text)
    (self_closing_element
      name: (tag_name))
    (text)
    (view_end_tag
      (section_tag_name)))
  (text))

===================================
Snippet marker with bare parameters
===================================

<puzzle-view><UserList users={ users }><Snippet fits="row" user group>{ user.name }</Snippet></UserList><Slot name="row" user={ u }>none</Slot><Snippet/></puzzle-view>

---
